--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,11 +1,7 @@
 <app-header></app-header>
+
 <main>
-  <app-hero id="home"></app-hero>
-  <app-about id="about"></app-about>
-  <app-skills id="skills"></app-skills>
-  <app-projects id="work"></app-projects>
-  <app-experience id="experience"></app-experience>
-  <app-contact id="contact"></app-contact>
+  <router-outlet></router-outlet>
 </main>
 
 <div class="cursor-dot"></div>
