Refactor code structure for improved readability and maintainability

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -3,7 +3,7 @@
         <div class="logo">
             <a href="#">
                 <span class="code-bracket">&lt;</span>
-                <span class="name">VISHAL</span>
+                <span class="name">VB</span>
                 <span class="code-bracket">/&gt;</span>
             </a>
         </div>
