--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -25,6 +25,7 @@
                         experience</a></li>
                 <li><a href="#contact" (click)="scrollToSection('contact')"><span class="nav-number">07</span> //
                         contact</a></li>
+                <!-- <li><a href="assets/documents/Vishal_Bhurke_Resume.pdf" download="Vishal_Bhurke_Resume.pdf" class="resume-link"><span class="nav-number">CV</span> // resume</a></li> -->
             </ul>
         </nav>
 
@@ -46,6 +47,7 @@
             </li>
             <li><a href="#experience" (click)="closeMenu()"><span class="nav-number">06</span> // experience</a></li>
             <li><a href="#contact" (click)="closeMenu()"><span class="nav-number">07</span> // contact</a></li>
+            <li><a href="assets/documents/Vishal_Bhurke_Resume.pdf" download="Vishal_Bhurke_Resume.pdf" (click)="closeMenu()"><span class="nav-number">CV</span> // resume</a></li>
         </ul>
     </div>
 </header>
