--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -86,6 +86,18 @@ header {
                     width: 100%;
                 }
             }
+
+            .resume-link {
+                color: var(--accent-secondary) !important;
+
+                .nav-number {
+                    color: var(--accent-secondary) !important;
+                }
+
+                &:hover {
+                    color: var(--accent-secondary) !important;
+                }
+            }
         }
     }
 }
